--- a/index.html
+++ b/index.html
@@ -159,13 +159,12 @@
 	</style>
 </head>
 <body>
-    <h2>Index of Root</h2>
-    <p>Last updated on 2022-10-31 23:29:07</p>
+    <h2>Archivos Subidos</h2>
     <hr>
     <table class="fs">
     	<tr>
     		<th valign="top">
-    			<img src="data:," alt="[ICO]">
+			
     		</th>
     		<th>
     			<a href="#">Name</a>
@@ -179,7 +178,7 @@
     	</tr>
     	<tr>
 	    	<td valign="top">
-		    	<img src="data:," alt="[parent]">
+
 	    	</td>
 	    	<td>
 	    		<a href="../">Parent Directory</a>
